# nrf-pc-ble-driver

./: .gitignore  CMakeLists.txt  README.md  gen.sh  toolchain_arm.cmake  version.cmake
cmake/: nrf-ble-driver.cmake
hex/: CMakeLists.txt
hex/cmake/: util.cmake
nRF5_SDK_15.3.0/: README.md
nRF5_SDK_15.3.0/components/boards/: pca10056.h  pca10112.h
nRF5_SDK_15.3.0/components/drivers_ext/nrf21540_jdrf/include/: nrf21540.h  nrf21540Configs.h
nRF5_SDK_15.3.0/components/drivers_ext/nrf21540_jdrf/src/: nrf21540.c
nRF5_SDK_15.3.0/components/libraries/bootloader/dfu/: nrf_dfu_trigger_usb.c  nrf_dfu_trigger_usb.h
nRF5_SDK_15.3.0/components/libraries/util/: nrf_assert.h
nRF5_SDK_15.3.0/components/serialization/common/: ser_config.h
nRF5_SDK_15.3.0/components/serialization/connectivity/: ser_conn_error_handling.c  ser_conn_event_encoder.c  ser_conn_handlers.h
nRF5_SDK_15.3.0/components/softdevice/common/: nrf_sdh.c  nrf_sdh_ble.c  nrf_sdh_ble.h
nRF5_SDK_15.3.0/components/softdevice/s132v3/headers/: ble_gap.h  ble_types.h  nrf_nvic.h  nrf_sd_def.h
nRF5_SDK_15.3.0/components/toolchain/gcc/: Makefile.posix
nRF5_SDK_15.3.0/examples/: readme.txt
nRF5_SDK_15.3.0/examples/connectivity/ble_connectivity/: main.c
nRF5_SDK_15.3.0/examples/dfu/: dfu_public_key.c
nRF5_SDK_15.3.0/integration/nrfx/legacy/: nrf_drv_power.c
pc-ble-driver/: CMakeLists.txt
pc-ble-driver/cmake/: install-target.cmake  nrf-ble-driver.cmake
pc-ble-driver/hex/: CMakeLists.txt
pc-ble-driver/hex/cmake/: util.cmake
(+100 files in other folders)
